TaggedTemplateString function calls should emit tail position calls https://bugs.webkit.org/show_bug.cgi?id=161948

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-09-14
Reviewed by Yusuke Suzuki.

JSTests:

* stress/tail-call-recognize.js:
(runTests):
Ensure a tagged template string function call is tail call.

* test262.yaml:
These now pass.

Source/JavaScriptCore:

* bytecompiler/NodesCodegen.cpp:
(JSC::TaggedTemplateNode::emitBytecode):
The tagged template string function call can be a tail call:
https://tc39.github.io/ecma262/#sec-tagged-templates-runtime-semantics-evaluation

Canonical link: https://commits.webkit.org/180108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205916 268f45cc-cd09-0410-ab3c-d52691b4dbfc